css/appointments.css
/*-- -------------------------- -->
<---        Navigation          -->
<--- -------------------------- -*/

/* Desktop */
@media only screen and (min-width: 1025px) {
  #navigation {
    height: 3.75em !important;
  }
  #navigation .logo {
    height: 2.75em !important;
  }
}


/*-- -------------------------- -->
<---        Appointments        -->
<--- -------------------------- -*/

/* Mobile */
@media only screen and (min-width: 0em) {
  #appointments .loading-wrapper {
    position: absolute;
    text-align: center;
    height: 2.75em;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    z-index: 0;
  }
  #appointments .lds-ring.active {
    background-color: transparent;
  }
  #appointments .script-wrapper {
    position: relative;
    z-index: 1;
  }
  #appointments iframe {
    position: fixed;
    top: 3.75em;
    left: 0;
    right: 0;
    bottom: 0;
    height: calc(100vh - 3.75em) !important;
    min-height: 0 !important;
  }
}

